--- a/exer03.html
+++ b/exer03.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./03.css">
     <title> exercício 3</title>
 </head>
 <body>
