--- a/exer03.html
+++ b/exer03.html
@@ -7,6 +7,7 @@
     <title> exercício 3</title>
 </head>
 <body>
-    
+    <div class="circulo"></div>
+    <div class="circuloM"></div>
 </body>
 </html>
