--- a/exer02.html
+++ b/exer02.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./02.css">
     <title> exercício 2</title>
 </head>
+<!-- criação de classes para organizar os elementos -->
 <body>
     <div class="quadrado"></div>
     <div class="quadrado2"></div>
