--- a/exer03.html
+++ b/exer03.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./03.css">
     <title>Document</title>
 </head>
+<!-- criação de classes para organizar os elementos -->
 <body>
     <div class="quadrado-1"></div>
     <div class="quadrado-2"></div>
